--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -42,8 +42,68 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="../static/css/blog.css" rel="stylesheet" th:href="@{css/blog.css}"/>
+    <style>
+        body {
+            margin-top: 50px;
+        }
+    </style>
 </head>
-<body>
+<body class="container">
+<div class="card">
+    <div class="card-body">
+        <div class="jumbotron text-center">
+            <h1>Cadastrar-se</h1>
+        </div>
+
+        <div th:if="${passwordError != null}">
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <span th:text="${passwordError}"></span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+
+        <form action="index.html" th:action="@{/signup}" th:object="${user}" method="post">
+            <div class="row">
+                <div class="form-group col-6">
+                    <label>Nome</label>
+                    <input type="text" th:field="*{name}" class="form-control" autofocus required>
+                </div>
+                <div class="form-group col-6">
+                    <label>E-mail</label>
+                    <input type="email" th:field="*{email}" class="form-control" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-6">
+                    <label>Senha</label>
+                    <input type="password" th:field="*{password}" class="form-control" required>
+                </div>
+                <div class="form-group col-6">
+                    <label>Confirmar Senha</label>
+                    <input type="password" name="confirmPassword" class="form-control" required>
+                </div>
+            </div>
+
+            <hr>
+
+            <button class="btn btn-primary">
+                <i class="fas fa-save"></i> Salvar
+            </button>
+            <button class="btn btn-secondary float-right" type="reset">
+                <i class="far fa-window-close"></i> Cancelar
+            </button>
+        </form>
+    </div>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
