--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
     <header class="blog-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
-                <a class="text-muted" href="signup.html" th:href="@{/signup}">
+                <a class="text-muted" href="signup.html" th:href="@{/signup}" th:if="${session.currentUser == null}">
                     <i class="fas fa-id-card"></i> <span th:text="#{blog.subscribe}">Subscribe</span>
                 </a>
             </div>
@@ -58,9 +58,25 @@
                 <img src="../static/images/blog-logo.png" th:src="@{images/blog-logo.png}" alt="Logo" height="50px"/>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="btn btn-sm btn-outline-secondary" href="#">
+                <a class="btn btn-sm btn-outline-secondary" href="login.html" th:href="@{/login}"
+                   th:if="${session.currentUser == null}">
                     <i class="fas fa-sign-in-alt"></i> <span th:text="#{blog.signin}">Sign in</span>
                 </a>
+                <div class="dropdown" th:if="${session.currentUser != null}">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span th:text="${session.currentUser.name}"></span>
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="#">Perfil</a>
+                        <a class="dropdown-item" href="#">Novo Artigo</a>
+                        <a class="dropdown-item" href="#">Meus Artigos</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="login.html" th:href="@{/login/logout}">
+                            Sair
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
@@ -173,5 +189,13 @@
         <a href="#">Back to top</a>
     </p>
 </footer>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+        crossorigin="anonymous"></script>
+
 </body>
 </html>
