--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,52 +49,44 @@
     </style>
 </head>
 <body class="container">
-<div class="card">
-    <div class="card-body">
-        <div class="jumbotron text-center">
-            <h1>Cadastrar-se</h1>
-        </div>
+<div class="row">
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card card-signin my-5">
+            <div class="text-center">
+                <img src="../static/images/login.svg" th:src="@{/images/login.svg}"
+                     style="height: 150px; width: 150px; margin-top: 25px;" class="card-img-top" alt="Login">
+            </div>
 
-        <div th:if="${messageError != null}">
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                <span th:text="${messageError}"></span>
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+            <div th:if="${messageError != null}">
+                <br>
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <span th:text="${messageError}"></span>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            </div>
+
+            <div class="card-body">
+                <form action="index.html" th:action="@{/login}" th:object="${user}" method="post">
+                    <div class="form-group">
+                        <label>E-mail</label>
+                        <input type="email" th:field="*{email}" class="form-control" placeholder="Digite seu e-mail"
+                               autofocus required>
+                    </div>
+                    <div class="form-group">
+                        <label>Senha</label>
+                        <input type="password" th:field="*{password}" class="form-control"
+                               placeholder="Digite sua senha" required>
+                    </div>
+
+                    <hr>
+                    <button class="btn btn-primary btn-block text-uppercase">
+                        <i class="fas fa-sign-in-alt"></i> Login
+                    </button>
+                </form>
             </div>
         </div>
-
-        <form action="index.html" th:action="@{/signup}" th:object="${user}" method="post">
-            <div class="row">
-                <div class="form-group col-6">
-                    <label>Nome</label>
-                    <input type="text" th:field="*{name}" class="form-control" autofocus required>
-                </div>
-                <div class="form-group col-6">
-                    <label>E-mail</label>
-                    <input type="email" th:field="*{email}" class="form-control" required>
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-6">
-                    <label>Senha</label>
-                    <input type="password" th:field="*{password}" class="form-control" required>
-                </div>
-                <div class="form-group col-6">
-                    <label>Confirmar Senha</label>
-                    <input type="password" name="confirmPassword" class="form-control" required>
-                </div>
-            </div>
-
-            <hr>
-
-            <button class="btn btn-primary">
-                <i class="fas fa-save"></i> Salvar
-            </button>
-            <button class="btn btn-secondary float-right" type="reset">
-                <i class="far fa-window-close"></i> Cancelar
-            </button>
-        </form>
     </div>
 </div>
 
