--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -111,28 +111,33 @@
 <main role="main" class="container">
     <div class="row">
         <div class="col-md-8 blog-main">
-            <div class="blog-post">
-                <h1 class="blog-post-title">Sample blog post</h1>
-                <p class="blog-post-meta">January 1, 2014 by <a href="#">Mark</a></p>
+            <div class="blog-post card" th:each="article : ${articles}">
 
-                <p>This blog post shows a few different types of content that’s supported and styled with Bootstrap.
-                    Basic typography, images, and code are all supported.</p>
-                <hr>
-                <p>Cum sociis natoque penatibus et magnis <a href="#">dis parturient montes</a>, nascetur ridiculus mus.
-                    Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Sed posuere
-                    consectetur est at lobortis. Cras mattis consectetur purus sit amet fermentum.</p>
-                <blockquote>
-                    <p>Curabitur blandit tempus porttitor. <strong>Nullam quis risus eget urna mollis</strong> ornare
-                        vel eu leo. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                </blockquote>
-                <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet
-                    fermentum. Aenean lacinia bibendum nulla sed consectetur.</p></div><!-- /.blog-post -->
+                <h1 class="blog-post-title card-header" th:text="${article.title}">
+                    Sample blog post
+                </h1>
+
+                <div class="card-body">
+                    <h5 class="card-title text-muted" th:text="${article.subTitle}">Sub Title</h5>
+                    <p th:text="${article.content}">Content.</p>
+                </div>
+
+                <div class="card-footer text-muted">
+                    <div class="badge badge-secondary">
+                        Autor: <span th:text="${article.author.user.name}">Author</span>
+                    </div>
+                    <div class="badge badge-secondary">
+                        Data: <span th:text="${#temporals.format(article.date, 'dd/MM/yyyy HH:mm:ss')}">Data de criação</span>
+                    </div>
+                </div>
+            </div><!-- /.blog-post -->
 
             <nav class="blog-pagination">
-                <a class="btn btn-outline-primary" href="#">
+                <a class="btn btn-outline-primary" href="#" th:href="@{'/?page=' + ${previousPage}}" th:classappend="${isFirst} ? 'disabled'">
                     <i class="fas fa-angle-double-left"></i> <span th:text="#{article.older}">Older</span>
                 </a>
-                <a class="btn btn-outline-secondary disabled" href="#" tabindex="-1" aria-disabled="true">
+
+                <a class="btn btn-outline-secondary" href="#" th:href="@{'/?page=' + ${nextPage}}" th:classappend="${isLast} ? 'disabled'">
                     <span th:text="#{article.newer}">Newer</span> <i class="fas fa-angle-double-right"></i>
                 </a>
             </nav>
