--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/blog/">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}">
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
@@ -19,7 +19,7 @@
           crossorigin="anonymous">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../static/images/favicon.png" th:href="@{images/favicon.png}"/>
+    <link rel="icon" type="image/png" href="../static/images/favicon.png" th:href="@{/images/favicon.png}"/>
     <meta name="theme-color" content="#563d7c">
 
     <style>
@@ -41,7 +41,7 @@
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="../static/css/blog.css" rel="stylesheet" th:href="@{css/blog.css}"/>
+    <link href="../static/css/blog.css" rel="stylesheet" th:href="@{/css/blog.css}"/>
 </head>
 <body>
 <div class="container">
@@ -55,7 +55,7 @@
             </div>
             <div class="col-4 text-center">
                 <!-- <a class="blog-header-logo text-dark" href="#">Large</a> -->
-                <img src="../static/images/blog-logo.png" th:src="@{images/blog-logo.png}" alt="Logo" height="50px"/>
+                <img src="../static/images/blog-logo.png" th:src="@{/images/blog-logo.png}" alt="Logo" height="50px"/>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="btn btn-sm btn-outline-secondary" href="login.html" th:href="@{/login}"
@@ -73,6 +73,7 @@
                             Novo Artigo
                         </a>
                         <a class="dropdown-item" href="#">Meus Artigos</a>
+                        <a class="dropdown-item" href="articles-list.html" th:href="@{/article/list}">Todos Artigos</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="login.html" th:href="@{/login/logout}">
                             Sair
