--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -11,7 +11,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/blog/">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{css/bootstrap.min.css}">
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
@@ -19,7 +19,7 @@
           crossorigin="anonymous">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../static/images/favicon.png" th:href="@{images/favicon.png}"/>
+    <link rel="icon" type="image/png" href="../static/images/favicon.png" th:href="@{/images/favicon.png}"/>
     <meta name="theme-color" content="#563d7c">
 
     <style>
@@ -41,7 +41,7 @@
     <!-- Custom styles for this template -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="../static/css/blog.css" rel="stylesheet" th:href="@{css/blog.css}"/>
+    <link href="../static/css/blog.css" rel="stylesheet" th:href="@{/css/blog.css}"/>
     <style>
         body {
             margin-top: 50px;
