--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -72,7 +72,7 @@
                         <a class="dropdown-item" href="article.html" th:href="@{/article}">
                             Novo Artigo
                         </a>
-                        <a class="dropdown-item" href="#">Meus Artigos</a>
+                        <a class="dropdown-item" href="articles-list.html" th:href="@{/article/list/user/{id}(id=${session.currentUser.id})}">Meus Artigos</a>
                         <a class="dropdown-item" href="articles-list.html" th:href="@{/article/list}">Todos Artigos</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="login.html" th:href="@{/login/logout}">
