--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -69,9 +69,15 @@
                 <label>Título</label>
                 <input type="text" th:field="*{title}" class="form-control" autofocus required>
             </div>
+            <div class="row">
             <div class="form-group">
                 <label>Sub-título</label>
                 <input type="text" th:field="*{subTitle}" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label>Sub-título</label>
+                <input type="text" th:field="*{subTitle}" class="form-control" required>
+            </div>
             </div>
             <div class="form-group">
                 <label>Conteúdo</label>
