--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,8 +54,10 @@
                 </a>
             </div>
             <div class="col-4 text-center">
-                <!-- <a class="blog-header-logo text-dark" href="#">Large</a> -->
-                <img src="../static/images/blog-logo.png" th:src="@{/images/blog-logo.png}" alt="Logo" height="50px"/>
+                <a class="text-muted" href="index.html" th:href="@{/}">
+                    <!-- <a class="blog-header-logo text-dark" href="#">Large</a> -->
+                    <img src="../static/images/blog-logo.png" th:src="@{/images/blog-logo.png}" th:alt="Logo" height="50px"/>
+                </a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
                 <a class="btn btn-sm btn-outline-secondary" href="login.html" th:href="@{/login}"
@@ -86,7 +88,10 @@
 
     <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
-            <a class="p-2 text-muted" href="#" th:each="category: ${categories}">
+            <a class="p-2 text-muted"
+               href="articles-list.html"
+               th:href="@{/article/list/category/{id}(id=${category.id})}"
+               th:each="category: ${categories}">
                 <span th:text="${category.name}">Technology</span>
             </a>
         </nav>
@@ -129,6 +134,9 @@
                     </div>
                     <div class="badge badge-secondary">
                         Data: <span th:text="${#temporals.format(article.date, 'dd/MM/yyyy HH:mm:ss')}">Data de criação</span>
+                    </div>
+                    <div class="badge badge-secondary">
+                        Data: <span th:text="${article.category.name}">Categoria</span>
                     </div>
                 </div>
             </div><!-- /.blog-post -->
