--- a/src/main/resources/templates/article-list.html
+++ b/src/main/resources/templates/article-list.html
@@ -98,7 +98,9 @@
 
         <div class="card-body">
             <h5 class="card-title text-muted" th:text="${article.subTitle}">Sub Title</h5>
-            <p th:text="${article.content}">Content.</p>
+            <p th:text="${article.content}">Content</p>
+
+
         </div>
 
         <div class="card-footer text-muted">
@@ -106,7 +108,10 @@
                 Autor: <span th:text="${article.author.user.name}">Author</span>
             </div>
             <div class="badge badge-secondary">
-                Data: <span th:text="${#temporals.format(article.date, 'dd/MM/yyyy HH:mm:ss')}">Data de criação</span>
+                Data: <span th:text="${#temporals.format(article.date, 'dd/MM/yyyy HH:mm:ss')}">Date Create</span>
+            </div>
+            <div class="badge badge-secondary float-right">
+                Categoria: <span th:text="${article.category.name}">Category</span>
             </div>
         </div>
     </div><!-- /.blog-post -->
