--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -70,14 +70,20 @@
                 <input type="text" th:field="*{title}" class="form-control" autofocus required>
             </div>
             <div class="row">
-            <div class="form-group">
-                <label>Sub-título</label>
-                <input type="text" th:field="*{subTitle}" class="form-control" required>
-            </div>
-            <div class="form-group">
-                <label>Sub-título</label>
-                <input type="text" th:field="*{subTitle}" class="form-control" required>
-            </div>
+                <div class="form-group col-8">
+                    <label>Sub-título</label>
+                    <input type="text" th:field="*{subTitle}" class="form-control" required>
+                </div>
+
+                <div class="form-group col-4">
+                    <label>Categoria</label>
+                    <select th:field="*{category.id}" class="form-control">
+                        <option th:each="category : ${categories}"
+                                th:value="${category.id}"
+                                th:text="${category.name}">
+                        </option>
+                    </select>
+                </div>
             </div>
             <div class="form-group">
                 <label>Conteúdo</label>
