--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -65,9 +65,15 @@
         </div>
 
         <form action="index.html" th:action="@{/article}" th:object="${article}" method="post">
-            <div class="form-group">
-                <label>Título</label>
-                <input type="text" th:field="*{title}" class="form-control" autofocus required>
+            <div class="row">
+                <div class="form-group col-2">
+                    <label>Id</label>
+                    <input type="text" th:field="*{id}" class="form-control" readonly>
+                </div>
+                <div class="form-group col-10">
+                    <label>Título</label>
+                    <input type="text" th:field="*{title}" class="form-control" autofocus required>
+                </div>
             </div>
             <div class="row">
                 <div class="form-group col-8">
