--- a/src/main/resources/templates/article-list.html
+++ b/src/main/resources/templates/article-list.html
@@ -100,19 +100,21 @@
             <h5 class="card-title text-muted" th:text="${article.subTitle}">Sub Title</h5>
             <p th:text="${article.content}">Content</p>
 
-            <a href="article.html"
-                class="btn btn-light btn-small"
-                th:href="@{/article/edit/{id}(id=${article.id})}"
-                th:if="${session.currentUser.id == article.author.user.id}">
-                <i class="fas fa-edit"></i>
-            </a>
+            <div th:if="${session.currentUser != null}">
+                <a href="article.html"
+                    class="btn btn-light btn-small"
+                    th:href="@{/article/edit/{id}(id=${article.id})}"
+                    th:if="${session.currentUser.id == article.author.user.id}">
+                    <i class="fas fa-edit"></i>
+                </a>
 
-            <a href="article.html"
-                class="btn btn-light btn-small"
-                th:href="@{/article/delete/{id}(id=${article.id})}"
-                th:if="${session.currentUser.id == article.author.user.id}">
-                <i class="fas fa-trash-alt text-danger"></i>
-            </a>
+                <a href="article.html"
+                    class="btn btn-light btn-small"
+                    th:href="@{/article/delete/{id}(id=${article.id})}"
+                    th:if="${session.currentUser.id == article.author.user.id}">
+                    <i class="fas fa-trash-alt text-danger"></i>
+                </a>
+            </div>
         </div>
 
         <div class="card-footer text-muted">
